test logictics model

--- a/notebooks/crisp-dm-methodology-for-a-customer-churn.ipynb
+++ b/notebooks/crisp-dm-methodology-for-a-customer-churn.ipynb
@@ -396,6 +396,28 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "customerID           object\n",
+      "gender               object\n",
+      "SeniorCitizen         int64\n",
+      "Partner              object\n",
+      "Dependents           object\n",
+      "tenure                int64\n",
+      "PhoneService         object\n",
+      "MultipleLines        object\n",
+      "InternetService      object\n",
+      "OnlineSecurity       object\n",
+      "OnlineBackup         object\n",
+      "DeviceProtection     object\n",
+      "TechSupport          object\n",
+      "StreamingTV          object\n",
+      "StreamingMovies      object\n",
+      "Contract             object\n",
+      "PaperlessBilling     object\n",
+      "PaymentMethod        object\n",
+      "MonthlyCharges      float64\n",
+      "TotalCharges         object\n",
+      "Churn                object\n",
+      "dtype: object\n",
       "['SeniorCitizen', 'tenure', 'MonthlyCharges']\n",
       "customerID           object\n",
       "gender               object\n",
@@ -425,6 +447,7 @@
    "source": [
     "# Lấy danh sách các cột số liệu (trực tiếp số liệu số nguyên và số thực) có nghĩa là các cột kiểu int64 và float64 \n",
     "numerical_cols = df.select_dtypes(include=['int64', 'float64']).columns.tolist()\n",
+    "print(df.dtypes)\n",
     "print(numerical_cols)\n",
     "\n",
     "# Chuyển TotalCharges thành số, ép buộc các giá trị trống thành NaN\n",
@@ -1047,6 +1070,14 @@
     "    X_test[['tenure', 'MonthlyCharges', 'TotalCharges']]\n",
     ")\n",
     "\n",
+    "#Chuẩn hóa cột chữ bằng label encoder\n",
+    "from sklearn.preprocessing import LabelEncoder\n",
+    "label_encoder = LabelEncoder()\n",
+    "categorical_cols = X.select_dtypes(include=['object']).columns.tolist()\n",
+    "for col in categorical_cols:\n",
+    "    X_train[col] = label_encoder.fit_transform(X_train[col])\n",
+    "    X_test[col] = label_encoder.transform(X_test[col])\n",
+    "\n",
     "\n",
     "print(\"✅ Đã chuẩn hóa dữ liệu với scaler\")\n",
     "print(f\"Số features: {X_train.shape[1]}\")\n",
@@ -1319,7 +1350,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "id": "cfb9bce6",
    "metadata": {},
    "outputs": [],
@@ -1370,7 +1401,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 19,
    "id": "8413c24a",
    "metadata": {
     "execution": {
@@ -1551,19 +1582,21 @@
     "tags": []
    },
    "source": [
-    "Hồi quy Logistic\n",
-    "Recall = 0.82 → Khả năng cao nhất để nhận diện các trường hợp churn, với rất ít trường hợp bỏ sót.\n",
-    "Độ chính xác dương = 0.53 → Nhiều dương tính giả hơn; chỉ khoảng một nửa số khách hàng được dự đoán là churn thực sự churn.\n",
+    "**Kết luận từ kết quả thực tế:**\n",
     "\n",
-    "Ưu điểm: Khả năng giải thích mạnh, thể hiện rõ những đặc trưng nào thúc đẩy rủi ro churn.\n",
+    "Dựa vào output so sánh metrics:\n",
+    "- **Hồi quy Logistic:** Accuracy = 0.81, F1 = 0.62, Recall = 0.55\n",
+    "- **RandomForest:** Accuracy = 0.81, F1 = 0.59, Recall = 0.50\n",
     "\n",
-    "Random Forest\n",
-    "Độ chính xác = 0.79 → Độ chính xác dự đoán tổng thể cao hơn.\n",
-    "Độ chính xác dương = 0.57 → Tốt hơn một chút so với Hồi quy Logistic, với ít dương tính giả hơn.\n",
+    "**Hồi quy Logistic là mô hình tốt nhất** vì:\n",
+    "1. **F1 Score cao hơn** (0.62 > 0.59) - đạt tiêu chí dự án (F1 ≥ 0.60)\n",
+    "2. **Recall cao hơn** (0.55 > 0.50) - bắt được nhiều trường hợp churn hơn\n",
+    "3. **Khả năng giải thích tốt** - dễ hiểu các đặc trưng ảnh hưởng đến churn\n",
+    "4. **Đơn giản và ổn định** - phù hợp triển khai production\n",
     "\n",
-    "Recall = 0.79 → Duy trì recall cao, bắt được hầu hết các trường hợp churn.\n",
+    "Mặc dù Random Forest có Precision cao hơn một chút (0.72 > 0.71), nhưng F1 Score và Recall quan trọng hơn trong bài toán dự đoán churn, vì chúng ta muốn bắt được nhiều khách hàng có nguy cơ rời bỏ nhất có thể.\n",
     "\n",
-    "Ưu điểm: Hiệu suất tổng thể vững chắc hơn, phù hợp cho triển khai kinh doanh."
+    "**Quyết định:** Sử dụng **Logistic Regression** làm mô hình chính cho deployment."
    ]
   },
   {
@@ -1580,8 +1613,20 @@
     "tags": []
    },
    "source": [
-    "So sánh mô hình (Giải thích kinh doanh)\n",
-    "RandomForest đạt AUC cao hơn (0.79) so với Hồi quy Logistic (0.78), chỉ ra khả năng mạnh hơn để phân biệt khách hàng churn so với không churn. Hồi quy Logistic vẫn có giá trị cho khả năng giải thích, thể hiện những đặc trưng nào ảnh hưởng nhiều nhất đến churn. Trong thực tế, RandomForest được khuyến nghị triển khai do hiệu suất dự đoán tốt hơn, trong khi Hồi quy Logistic có thể hỗ trợ giao tiếp với các bên liên quan và hiểu biết về đặc trưng."
+    "## So sánh mô hình (Giải thích kinh doanh)\n",
+    "\n",
+    "**Kết quả từ bảng metrics:**\n",
+    "\n",
+    "Hồi quy Logistic đạt F1 Score cao nhất (0.62), vượt qua cả RandomForest (0.59) và đạt tiêu chí thành công của dự án (F1 ≥ 0.60). \n",
+    "\n",
+    "**Ưu điểm của Logistic Regression:**\n",
+    "- F1 Score cao nhất trong tất cả các mô hình\n",
+    "- Recall cao hơn Random Forest (0.55 vs 0.50) - quan trọng để bắt được nhiều trường hợp churn\n",
+    "- Khả năng giải thích tốt - rõ ràng đặc trưng nào ảnh hưởng đến churn\n",
+    "- Đơn giản, ổn định, dễ triển khai và maintain\n",
+    "\n",
+    "**Khuyến nghị triển khai:**\n",
+    "Sử dụng **Logistic Regression** làm mô hình chính cho production deployment vì hiệu suất tốt nhất (F1 = 0.62, Accuracy = 0.81) và khả năng giải thích cao, giúp các bên liên quan hiểu rõ yếu tố rủi ro churn."
    ]
   },
   {
@@ -1598,23 +1643,34 @@
     "tags": []
    },
    "source": [
-    "Giai đoạn 6: Triển khai\n",
+    "## Giai đoạn 6: Triển khai\n",
     "\n",
-    "6.1 Triển khai mô hình\n",
-    "Chọn mô hình cuối cùng: Dựa trên đánh giá ở Giai đoạn 5, bộ phân loại Random Forest được khuyến nghị làm mô hình dự đoán chính (AUC = 0.79, thể hiện hiệu suất vượt trội). Hồi quy Logistic vẫn có giá trị là mô hình bổ sung cho khả năng giải thích, giúp các bên liên quan hiểu được những đặc trưng nào ảnh hưởng mạnh nhất đến churn.\n",
+    "### 6.1 Triển khai mô hình\n",
     "\n",
-    "Cân nhắc khi triển khai:\n",
-    "- Phạm vi: Bắt đầu với môi trường kiểm soát hoặc các phân khúc khách hàng thí điểm để xác thực hiệu suất và đánh giá tác động kinh doanh trước khi triển khai toàn diện.\n",
-    "- Giám sát: Theo dõi kết quả dự đoán theo thời gian thực với bảng điều khiển, tập trung vào dương tính giả, âm tính giả và khả năng dịch chuyển trong hành vi khách hàng.\n",
-    "- Hiệu chỉnh ngưỡng: Điều chỉnh ngưỡng quyết định tùy theo việc ưu tiên độ chính xác dương (tránh cảnh báo sai) hay recall (bắt được các trường hợp churn thực sự), và hiệu chỉnh lại định kỳ khi mẫu churn thay đổi.\n",
-    "- Tích hợp: Sử dụng Random Forest cho triển khai trong khi tận dụng Hồi quy Logistic cho hiểu biết về đặc trưng và giao tiếp với các bên liên quan.\n",
+    "**Chọn mô hình cuối cùng:** Dựa trên đánh giá ở Giai đoạn 5, **Logistic Regression** được chọn làm mô hình dự đoán chính với:\n",
+    "- F1 Score = **0.62** (đạt tiêu chí ≥ 0.60)\n",
+    "- Accuracy = **0.81**\n",
+    "- Recall = **0.55** (cao hơn Random Forest)\n",
     "\n",
-    "6.2 Tài liệu hóa\n",
+    "**Lý do chọn Logistic Regression:**\n",
+    "1. Đạt F1 Score cao nhất trong tất cả các mô hình\n",
+    "2. Recall cao giúp bắt được nhiều trường hợp churn hơn\n",
+    "3. Khả năng giải thích tốt - stakeholders hiểu rõ yếu tố ảnh hưởng\n",
+    "4. Đơn giản, ổn định, dễ maintain trong production\n",
+    "\n",
+    "**Cân nhắc khi triển khai:**\n",
+    "- **Phạm vi:** Bắt đầu với môi trường kiểm soát hoặc các phân khúc khách hàng thí điểm để xác thực hiệu suất và đánh giá tác động kinh doanh trước khi triển khai toàn diện.\n",
+    "- **Giám sát:** Theo dõi kết quả dự đoán theo thời gian thực với bảng điều khiển, tập trung vào dương tính giả, âm tính giả và khả năng dịch chuyển trong hành vi khách hàng.\n",
+    "- **Hiệu chỉnh ngưỡng:** Điều chỉnh ngưỡng quyết định tùy theo việc ưu tiên độ chính xác dương (tránh cảnh báo sai) hay recall (bắt được các trường hợp churn thực sự), và hiệu chỉnh lại định kỳ khi mẫu churn thay đổi.\n",
+    "- **Tích hợp:** Sử dụng Logistic Regression cho cả triển khai và giải thích cho các bên liên quan.\n",
+    "\n",
+    "### 6.2 Tài liệu hóa\n",
+    "\n",
     "Tài liệu hóa là thiết yếu để đảm bảo tính tái sản xuất, minh bạch và sự thống nhất của các bên liên quan. Giai đoạn này bao gồm:\n",
-    "- Tài liệu kỹ thuật: Ghi lại các bước chuẩn bị dữ liệu, huấn luyện mô hình, điều chỉnh siêu tham số và chỉ số đánh giá.\n",
-    "- Báo cáo kinh doanh: Chuyển kết quả mô hình thành ngôn ngữ kinh doanh, làm nổi bật sự đánh đổi giữa độ chính xác dương và recall, và làm rõ chiến lược triển khai.\n",
-    "- Kiểm soát phiên bản: Lưu mô hình đã triển khai (ví dụ, churn_model.pkl) và duy trì lịch sử phiên bản cho các cải tiến trong tương lai.\n",
-    "- Phản tư: Ghi chép rủi ro, hạn chế và bài học rút ra, đảm bảo triển khai được coi là một cốt mốc trong quy trình lặp lại, tiến hóa chứ không phải là điểm kết thúc cuối cùng."
+    "- **Tài liệu kỹ thuật:** Ghi lại các bước chuẩn bị dữ liệu, huấn luyện mô hình, điều chỉnh siêu tham số và chỉ số đánh giá.\n",
+    "- **Báo cáo kinh doanh:** Chuyển kết quả mô hình thành ngôn ngữ kinh doanh, làm nổi bật sự đánh đổi giữa độ chính xác dương và recall, và làm rõ chiến lược triển khai.\n",
+    "- **Kiểm soát phiên bản:** Lưu mô hình đã triển khai (ví dụ, logistic_model.pkl) và duy trì lịch sử phiên bản cho các cải tiến trong tương lai.\n",
+    "- **Phản tư:** Ghi chép rủi ro, hạn chế và bài học rút ra, đảm bảo triển khai được coi là một cốt mốc trong quy trình lặp lại, tiến hóa chứ không phải là điểm kết thúc cuối cùng."
    ]
   },
   {
@@ -1643,9 +1699,9 @@
      "output_type": "stream",
      "text": [
       "            Mô hình  Độ chính xác  Độ chính xác dương    Recall        F1\n",
-      "0  Hồi quy Logistic      0.746629            0.531409  0.794416  0.636826\n",
-      "1      RandomForest      0.774308            0.575099  0.738579  0.646667\n",
-      "2          Ensemble      0.763662            0.555154  0.779188  0.648363\n"
+      "0  Hồi quy Logistic      0.810504            0.706840  0.550761  0.619116\n",
+      "1      RandomForest      0.806246            0.720000  0.502538  0.591928\n",
+      "2          Ensemble      0.806955            0.706081  0.530457  0.605797\n"
      ]
     }
    ],
@@ -1711,7 +1767,7 @@
      "output_type": "stream",
      "text": [
       "✅ Đã lưu mô hình vào thư mục ../models/\n",
-      "   - rf_model.pkl: Mô hình Random Forest\n",
+      "   - logistic_model.pkl: Mô hình Logistic Regression (Best Model)\n",
       "   - scaler.pkl: StandardScaler\n",
       "   - feature_columns.pkl: Danh sách tên cột đặc trưng\n"
      ]
@@ -1725,9 +1781,9 @@
     "models_dir = os.path.join('..', 'models')\n",
     "os.makedirs(models_dir, exist_ok=True)\n",
     "\n",
-    "# Lưu mô hình Random Forest tốt nhất\n",
-    "with open(os.path.join(models_dir, 'rf_model.pkl'), 'wb') as f:\n",
-    "    pickle.dump(rf_model, f)\n",
+    "# Lưu mô hình Logistic Regression (model tốt nhất theo F1 Score = 0.62)\n",
+    "with open(os.path.join(models_dir, 'logistic_model.pkl'), 'wb') as f:\n",
+    "    pickle.dump(log_reg, f)\n",
     "\n",
     "# Lưu scaler ĐÃ ĐƯỢC FIT (QUAN TRỌNG!)\n",
     "# Scaler này đã được fit ở cell trước với X_train\n",
@@ -1739,7 +1795,7 @@
     "    pickle.dump(X_train.columns.tolist(), f)\n",
     "\n",
     "print(\"✅ Đã lưu mô hình vào thư mục ../models/\")\n",
-    "print(\"   - rf_model.pkl: Mô hình Random Forest\")\n",
+    "print(\"   - logistic_model.pkl: Mô hình Logistic Regression (Best Model)\")\n",
     "print(\"   - scaler.pkl: StandardScaler\")\n",
     "print(\"   - feature_columns.pkl: Danh sách tên cột đặc trưng\")\n"
    ]
@@ -1774,13 +1830,19 @@
     "5. Evaluation - So sánh metrics, ROC curves\n",
     "6. Deployment - Lưu model, xây dựng demo app\n",
     "\n",
-    "✅ **Đạt tiêu chí thành công:** F1 Score = 0.68 (≥ 0.60)\n",
+    "✅ **Đạt tiêu chí thành công:** F1 Score = 0.62 (≥ 0.60)\n",
+    "\n",
+    "✅ **Mô hình tốt nhất:** Logistic Regression\n",
+    "- F1 Score: 0.62\n",
+    "- Accuracy: 0.81\n",
+    "- Recall: 0.55\n",
+    "- Precision: 0.71\n",
     "\n",
     "✅ **Deliverables:**\n",
     "- Notebook phân tích đầy đủ\n",
     "- Source code Python (src/)\n",
-    "- Mô hình đã lưu (models/)\n",
-    "- Demo app (demo/)\n",
+    "- Mô hình đã lưu (models/logistic_model.pkl)\n",
+    "- Demo app (demo/app.py)\n",
     "- Requirements.txt\n",
     "- README.md\n",
     "\n",
@@ -1827,7 +1889,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.8"
+   "version": "3.12.6"
   },
   "papermill": {
    "default_parameters": {},
