--- a/notebooks/crisp-dm-methodology-for-a-customer-churn.ipynb
+++ b/notebooks/crisp-dm-methodology-for-a-customer-churn.ipynb
@@ -959,23 +959,24 @@
    },
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\n",
-      "💧 Đã fill missing values:\n",
-      "Train: 0 missing\n",
-      "Test: 0 missing\n",
-      "✅ Đã khởi tạo StandardScaler (chưa fit)\n",
-      "✅ Đã chuẩn hóa dữ liệu với scaler\n",
-      "Số features: 30\n",
-      "Tập train: (5634, 30), Tập test: (1409, 30)\n"
+     "ename": "KeyError",
+     "evalue": "\"['customerID'] not found in axis\"",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
+      "\u001b[31mKeyError\u001b[39m                                  Traceback (most recent call last)",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[11]\u001b[39m\u001b[32m, line 2\u001b[39m\n\u001b[32m      1\u001b[39m \u001b[38;5;66;03m# Tách X và y TRƯỚC KHI xử lý missing values\u001b[39;00m\n\u001b[32m----> \u001b[39m\u001b[32m2\u001b[39m X = \u001b[43mdf\u001b[49m\u001b[43m.\u001b[49m\u001b[43mdrop\u001b[49m\u001b[43m(\u001b[49m\u001b[43m[\u001b[49m\u001b[33;43m'\u001b[39;49m\u001b[33;43mcustomerID\u001b[39;49m\u001b[33;43m'\u001b[39;49m\u001b[43m,\u001b[49m\u001b[33;43m'\u001b[39;49m\u001b[33;43mChurn\u001b[39;49m\u001b[33;43m'\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[33;43m'\u001b[39;49m\u001b[33;43mtarget\u001b[39;49m\u001b[33;43m'\u001b[39;49m\u001b[43m]\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43maxis\u001b[49m\u001b[43m=\u001b[49m\u001b[32;43m1\u001b[39;49m\u001b[43m)\u001b[49m\n\u001b[32m      3\u001b[39m y = df[\u001b[33m'\u001b[39m\u001b[33mtarget\u001b[39m\u001b[33m'\u001b[39m]\n\u001b[32m      5\u001b[39m \u001b[38;5;66;03m# Chia tập dữ liệu thành tập huấn luyện và tập kiểm tra\u001b[39;00m\n",
+      "\u001b[36mFile \u001b[39m\u001b[32md:\\File hoc phan\\File hoc phan\\Khai thac du lieu\\Project\\Customer-churn-classification\\venv\\Lib\\site-packages\\pandas\\core\\frame.py:5603\u001b[39m, in \u001b[36mDataFrame.drop\u001b[39m\u001b[34m(self, labels, axis, index, columns, level, inplace, errors)\u001b[39m\n\u001b[32m   5455\u001b[39m \u001b[38;5;28;01mdef\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34mdrop\u001b[39m(\n\u001b[32m   5456\u001b[39m     \u001b[38;5;28mself\u001b[39m,\n\u001b[32m   5457\u001b[39m     labels: IndexLabel | \u001b[38;5;28;01mNone\u001b[39;00m = \u001b[38;5;28;01mNone\u001b[39;00m,\n\u001b[32m   (...)\u001b[39m\u001b[32m   5464\u001b[39m     errors: IgnoreRaise = \u001b[33m\"\u001b[39m\u001b[33mraise\u001b[39m\u001b[33m\"\u001b[39m,\n\u001b[32m   5465\u001b[39m ) -> DataFrame | \u001b[38;5;28;01mNone\u001b[39;00m:\n\u001b[32m   5466\u001b[39m \u001b[38;5;250m    \u001b[39m\u001b[33;03m\"\"\"\u001b[39;00m\n\u001b[32m   5467\u001b[39m \u001b[33;03m    Drop specified labels from rows or columns.\u001b[39;00m\n\u001b[32m   5468\u001b[39m \n\u001b[32m   (...)\u001b[39m\u001b[32m   5601\u001b[39m \u001b[33;03m            weight  1.0     0.8\u001b[39;00m\n\u001b[32m   5602\u001b[39m \u001b[33;03m    \"\"\"\u001b[39;00m\n\u001b[32m-> \u001b[39m\u001b[32m5603\u001b[39m     \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28;43msuper\u001b[39;49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\u001b[43m.\u001b[49m\u001b[43mdrop\u001b[49m\u001b[43m(\u001b[49m\n\u001b[32m   5604\u001b[39m \u001b[43m        \u001b[49m\u001b[43mlabels\u001b[49m\u001b[43m=\u001b[49m\u001b[43mlabels\u001b[49m\u001b[43m,\u001b[49m\n\u001b[32m   5605\u001b[39m \u001b[43m        \u001b[49m\u001b[43maxis\u001b[49m\u001b[43m=\u001b[49m\u001b[43maxis\u001b[49m\u001b[43m,\u001b[49m\n\u001b[32m   5606\u001b[39m \u001b[43m        \u001b[49m\u001b[43mindex\u001b[49m\u001b[43m=\u001b[49m\u001b[43mindex\u001b[49m\u001b[43m,\u001b[49m\n\u001b[32m   5607\u001b[39m \u001b[43m        \u001b[49m\u001b[43mcolumns\u001b[49m\u001b[43m=\u001b[49m\u001b[43mcolumns\u001b[49m\u001b[43m,\u001b[49m\n\u001b[32m   5608\u001b[39m \u001b[43m        \u001b[49m\u001b[43mlevel\u001b[49m\u001b[43m=\u001b[49m\u001b[43mlevel\u001b[49m\u001b[43m,\u001b[49m\n\u001b[32m   5609\u001b[39m \u001b[43m        \u001b[49m\u001b[43minplace\u001b[49m\u001b[43m=\u001b[49m\u001b[43minplace\u001b[49m\u001b[43m,\u001b[49m\n\u001b[32m   5610\u001b[39m \u001b[43m        \u001b[49m\u001b[43merrors\u001b[49m\u001b[43m=\u001b[49m\u001b[43merrors\u001b[49m\u001b[43m,\u001b[49m\n\u001b[32m   5611\u001b[39m \u001b[43m    \u001b[49m\u001b[43m)\u001b[49m\n",
+      "\u001b[36mFile \u001b[39m\u001b[32md:\\File hoc phan\\File hoc phan\\Khai thac du lieu\\Project\\Customer-churn-classification\\venv\\Lib\\site-packages\\pandas\\core\\generic.py:4810\u001b[39m, in \u001b[36mNDFrame.drop\u001b[39m\u001b[34m(self, labels, axis, index, columns, level, inplace, errors)\u001b[39m\n\u001b[32m   4808\u001b[39m \u001b[38;5;28;01mfor\u001b[39;00m axis, labels \u001b[38;5;129;01min\u001b[39;00m axes.items():\n\u001b[32m   4809\u001b[39m     \u001b[38;5;28;01mif\u001b[39;00m labels \u001b[38;5;129;01mis\u001b[39;00m \u001b[38;5;129;01mnot\u001b[39;00m \u001b[38;5;28;01mNone\u001b[39;00m:\n\u001b[32m-> \u001b[39m\u001b[32m4810\u001b[39m         obj = \u001b[43mobj\u001b[49m\u001b[43m.\u001b[49m\u001b[43m_drop_axis\u001b[49m\u001b[43m(\u001b[49m\u001b[43mlabels\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43maxis\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mlevel\u001b[49m\u001b[43m=\u001b[49m\u001b[43mlevel\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43merrors\u001b[49m\u001b[43m=\u001b[49m\u001b[43merrors\u001b[49m\u001b[43m)\u001b[49m\n\u001b[32m   4812\u001b[39m \u001b[38;5;28;01mif\u001b[39;00m inplace:\n\u001b[32m   4813\u001b[39m     \u001b[38;5;28mself\u001b[39m._update_inplace(obj)\n",
+      "\u001b[36mFile \u001b[39m\u001b[32md:\\File hoc phan\\File hoc phan\\Khai thac du lieu\\Project\\Customer-churn-classification\\venv\\Lib\\site-packages\\pandas\\core\\generic.py:4852\u001b[39m, in \u001b[36mNDFrame._drop_axis\u001b[39m\u001b[34m(self, labels, axis, level, errors, only_slice)\u001b[39m\n\u001b[32m   4850\u001b[39m         new_axis = axis.drop(labels, level=level, errors=errors)\n\u001b[32m   4851\u001b[39m     \u001b[38;5;28;01melse\u001b[39;00m:\n\u001b[32m-> \u001b[39m\u001b[32m4852\u001b[39m         new_axis = \u001b[43maxis\u001b[49m\u001b[43m.\u001b[49m\u001b[43mdrop\u001b[49m\u001b[43m(\u001b[49m\u001b[43mlabels\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43merrors\u001b[49m\u001b[43m=\u001b[49m\u001b[43merrors\u001b[49m\u001b[43m)\u001b[49m\n\u001b[32m   4853\u001b[39m     indexer = axis.get_indexer(new_axis)\n\u001b[32m   4855\u001b[39m \u001b[38;5;66;03m# Case for non-unique axis\u001b[39;00m\n\u001b[32m   4856\u001b[39m \u001b[38;5;28;01melse\u001b[39;00m:\n",
+      "\u001b[36mFile \u001b[39m\u001b[32md:\\File hoc phan\\File hoc phan\\Khai thac du lieu\\Project\\Customer-churn-classification\\venv\\Lib\\site-packages\\pandas\\core\\indexes\\base.py:7136\u001b[39m, in \u001b[36mIndex.drop\u001b[39m\u001b[34m(self, labels, errors)\u001b[39m\n\u001b[32m   7134\u001b[39m \u001b[38;5;28;01mif\u001b[39;00m mask.any():\n\u001b[32m   7135\u001b[39m     \u001b[38;5;28;01mif\u001b[39;00m errors != \u001b[33m\"\u001b[39m\u001b[33mignore\u001b[39m\u001b[33m\"\u001b[39m:\n\u001b[32m-> \u001b[39m\u001b[32m7136\u001b[39m         \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mKeyError\u001b[39;00m(\u001b[33mf\u001b[39m\u001b[33m\"\u001b[39m\u001b[38;5;132;01m{\u001b[39;00mlabels[mask].tolist()\u001b[38;5;132;01m}\u001b[39;00m\u001b[33m not found in axis\u001b[39m\u001b[33m\"\u001b[39m)\n\u001b[32m   7137\u001b[39m     indexer = indexer[~mask]\n\u001b[32m   7138\u001b[39m \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28mself\u001b[39m.delete(indexer)\n",
+      "\u001b[31mKeyError\u001b[39m: \"['customerID'] not found in axis\""
      ]
     }
    ],
    "source": [
     "# Tách X và y TRƯỚC KHI xử lý missing values\n",
-    "X = df.drop(['customerID','Churn', 'target'], axis=1)\n",
+    "X = df.drop(['Churn', 'target'], axis=1)\n",
     "y = df['target']\n",
     "\n",
     "# Chia tập dữ liệu thành tập huấn luyện và tập kiểm tra\n",
@@ -1046,7 +1047,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "id": "eb4b460e",
    "metadata": {
     "execution": {
@@ -1129,7 +1130,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "id": "2203b158",
    "metadata": {
     "execution": {
@@ -1185,96 +1186,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 14,
-   "id": "13068195",
-   "metadata": {
-    "execution": {
-     "iopub.execute_input": "2025-11-22T11:51:21.088997Z",
-     "iopub.status.busy": "2025-11-22T11:51:21.088605Z",
-     "iopub.status.idle": "2025-11-22T11:51:25.928518Z",
-     "shell.execute_reply": "2025-11-22T11:51:25.927070Z"
-    },
-    "papermill": {
-     "duration": 4.857365,
-     "end_time": "2025-11-22T11:51:25.930313",
-     "exception": false,
-     "start_time": "2025-11-22T11:51:21.072948",
-     "status": "completed"
-    },
-    "tags": []
-   },
-   "outputs": [],
-   "source": [
-    "# from sklearn.model_selection import GridSearchCV\n",
-    "\n",
-    "# # Định nghĩa lưới tham số\n",
-    "# param_grid = {\n",
-    "#     'n_estimators': [100, 200, 300],\n",
-    "#     'max_depth': [None, 10, 20],\n",
-    "#     'min_samples_split': [2, 5, 10],\n",
-    "#     'min_samples_leaf': [1, 2, 4],\n",
-    "#     'class_weight': ['balanced']\n",
-    "# }\n",
-    "\n",
-    "# # Khởi tạo mô hình\n",
-    "# rf = RandomForestClassifier(random_state=42)\n",
-    "\n",
-    "# # GridSearchCV\n",
-    "# grid_search = GridSearchCV(\n",
-    "#     estimator=rf,\n",
-    "#     param_grid=param_grid,\n",
-    "#     cv=5,\n",
-    "#     scoring='f1',   # có thể chọn 'accuracy', 'recall', 'precision'\n",
-    "#     n_jobs=-1\n",
-    "# )\n",
-    "\n",
-    "# grid_search.fit(X_train, y_train)\n",
-    "\n",
-    "# print(\"Tham số tốt nhất:\", grid_search.best_params_)\n",
-    "# print(\"Điểm số tốt nhất:\", grid_search.best_score_)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 15,
-   "id": "e5e3bdf5",
-   "metadata": {
-    "execution": {
-     "iopub.execute_input": "2025-11-22T11:54:40.873147Z",
-     "iopub.status.busy": "2025-11-22T11:54:40.872690Z",
-     "iopub.status.idle": "2025-11-22T11:54:41.647147Z",
-     "shell.execute_reply": "2025-11-22T11:54:41.645992Z"
-    },
-    "papermill": {
-     "duration": 0.793769,
-     "end_time": "2025-11-22T11:54:41.649194",
-     "exception": false,
-     "start_time": "2025-11-22T11:54:40.855425",
-     "status": "completed"
-    },
-    "tags": []
-   },
-   "outputs": [],
-   "source": [
-    "# # Huấn luyện lại mô hình với tham số tốt nhất\n",
-    "# best_rf = grid_search.best_estimator_\n",
-    "# best_rf.fit(X_train, y_train)\n",
-    "# y_pred_best = best_rf.predict(X_test)\n",
-    "\n",
-    "# from sklearn.metrics import classification_report, confusion_matrix\n",
-    "\n",
-    "# # Đánh giá\n",
-    "# print(\"Độ chính xác:\", accuracy_score(y_test, y_pred_best))\n",
-    "# print(\"Ma trận nhầm lẫn:\\n\", confusion_matrix(y_test, y_pred_best))\n",
-    "# print(\"Báo cáo phân loại:\\n\", classification_report(y_test, y_pred_best))\n",
-    "\n",
-    "# import matplotlib.pyplot as plt\n",
-    "# import seaborn as sns\n",
-    "\n"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "id": "2d7375e2",
    "metadata": {
@@ -1293,7 +1204,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": null,
    "id": "cfb9bce6",
    "metadata": {},
    "outputs": [],
@@ -1345,7 +1256,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": null,
    "id": "8413c24a",
    "metadata": {
     "execution": {
@@ -1513,14 +1424,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "b95860f8",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
    "cell_type": "markdown",
    "id": "8172744c",
    "metadata": {
@@ -1602,7 +1505,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": null,
    "id": "b0d66ca4",
    "metadata": {
     "execution": {
@@ -1685,7 +1588,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": null,
    "id": "5d6b1dfb",
    "metadata": {},
    "outputs": [
